<resources>
    <!-- App definitions -->
    <string name="app_name">MyPocket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main activity menu -->
    <string name="menu_main_save_excel">Save Excel</string>

    <!-- Main activity -->
    <string name="activity_main_total_balance_text">Total Balance:</string>
    <string name="activity_main_total_balance_value">$ 0.00</string>
    <string name="activity_main_add_transaction">Add Transaction</string>
    <string name="activity_main_show_accounts">Show Accounts</string>
    <string name="activity_main_last_entries">Last Entries</string>

    <!-- Transaction row -->
    <string name="transaction_row_layout_value">$</string>

    <!-- Add transaction menu -->
    <string name="menu_add_transaction_add_category">+ Category</string>
    <string name="menu_add_transaction_add_account">+ Account</string>

    <!-- Add transaction -->
    <string name="add_transaction_label">Add Transaction</string>
    <string name="add_transaction_expense_radio">Expense</string>
    <string name="add_transaction_income_radio">Income</string>
    <string name="add_transaction_description_text">Description</string>
    <string name="add_transaction_value_text">Value</string>
    <string name="zero_value_edit_text">$0.00</string>
    <string name="date_text_view">Date</string>
    <string name="date_field_edit_text">MM/DD/YYYY</string>
    <string name="category_text_view">Category</string>
    <string name="account_text_view">Account</string>
    <string name="save_transaction_button">Save transaction</string>

    <!-- Show accounts -->
    <string name="label_show_accounts">Show Accounts</string>
    <string name="add_account_button">Add account</string>
    <string name="all_accounts_info">All accounts</string>

    <!-- Show Accounts row -->
    <string name="show_accounts_value">$</string>

    <!-- Add account -->
    <string name="label_add_account">Add Account</string>
    <string name="account_name_text_view">Account name:</string>
    <string name="initial_value_text_view">Initial Value:</string>
    <string name="account_active_switch">Active?</string>
    <string name="account_active_yes_radio">Yes</string>
    <string name="account_active_no_radio">No</string>

    <!-- See account -->
    <string name="label_see_account">See Account</string>

    <!-- Edit transaction -->
    <string name="label_edit_transaction">Edit Transaction</string>
    <string name="edit_transaction_update_button">Update Transaction</string>
    <string name="edit_transaction_delete_button">Delete Transaction</string>

    <!-- Add category -->
    <string name="label_create_category">Create category</string>
    <string name="category_name_text_view">Name</string>
    <string name="add_category_button">Save Category</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="title_activity_show_account_trans">Account Details</string>

    <!-- Account details -->
    <string name="acc_details_current_balance">Total Balance</string>
    <string name="acc_details_initial_value">Initial value</string>
    <string name="acc_details_all_entries">All Entries</string>

</resources>