<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.illinois.dscs.mypocket.controller.AccountDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/acc_details_current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_details_current_balance"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/current_balance_value_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/total_balance_value_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:clickable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp">

        <TextView
            android:id="@+id/initial_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_details_initial_value"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/initial_value_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/total_balance_value_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:clickable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/activate_account_toggle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textOn="Deactivate this account"
            android:textOff="Reactivate this account"
            style="?android:buttonBarButtonStyle"
            android:textColor="@android:color/white"
            android:onClick="changeActivation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/acc_details_all_entries"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/all_entries_list_view" />

</LinearLayout>
